<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	android:id="@+id/coordinatorLayout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<LinearLayout
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context="hu.beesmarter.bsmart.fontrecognizer.ui.MainActivity">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="30dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingEnd="10dp"
				android:text="@string/switch_label"
				android:textSize="20sp"/>

			<Switch
				android:id="@+id/mode_switch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layout_mode_test"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/input_value_ip"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/add_ip"/>
			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/start_communication"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="10dp"
				android:background="@color/colorPrimary"
				android:elevation="8dp"
				android:padding="10dp"
				android:text="@string/start_test_button"
				android:textColor="@android:color/white"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layout_mode_real"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<Button
				android:id="@+id/start_camera_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="30dp"
				android:background="@color/colorPrimary"
				android:elevation="8dp"
				android:padding="10dp"
				android:text="@string/start_camera"
				android:textColor="@android:color/white"/>

			<TextView
				android:id="@+id/status_message"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp"
				android:gravity="center_horizontal"
				android:text="@string/font_result_label"
				android:textSize="25sp"
				android:visibility="gone"/>

			<TextView
				android:id="@+id/font_result_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:textSize="50sp"
				android:textStyle="bold"/>
		</LinearLayout>
	</LinearLayout>
</android.support.design.widget.CoordinatorLayout>